--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,21 @@ html {
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center bottom;
+	min-height: 100vh;
+}
+
+@media (orientation: landscape) {
+	html {
+		background-size: 100vw auto;
+	}
+}
+
+@media (orientation: portrait) {
+	html {
+		background-size: auto 100vh;
+	}
 }
 
 h1 {
