--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,11 @@ html {
 }
 
 h1 {
-	color: #242a32;
-	text-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px;
+	color: #eaeaea;
+	font-family: Arial, Helvetica, sans-serif;
+	text-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px,
+		rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px,
+		rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 a {
