--- a/styles.css
+++ b/styles.css
@@ -24,17 +24,17 @@ html {
 
 h1 {
 	color: #eaeaea;
-	font-family: Arial, Helvetica, sans-serif;
-	text-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px,
-		rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px,
-		rgba(0, 0, 0, 0.09) 0px -3px 5px;
+	font-family: "Otomanopee One", sans-serif;
+	text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.7);
 }
 
 a {
 	outline: none;
 	text-decoration: underline;
+	text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.7);
 	padding: 2px 1px 0;
-	color: #242a32;
+	color: #eaeaea;
+	font-family: "Otomanopee One", sans-serif;
 }
 
 a:hover {
