feat: using more fancy shadow for gif

--- a/styles.css
+++ b/styles.css
@@ -48,8 +48,8 @@ img {
 	border-radius: 0.2rem;
 	width: 15rem;
 	height: auto;
-	box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
-		rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+	box-shadow: rgba(84, 78, 99, 0.4) 0px 5px, rgba(84, 78, 99, 0.3) 0px 10px,
+		rgba(84, 78, 99, 0.2) 0px 15px, rgba(84, 78, 99, 0.1) 0px 20px, rgba(84, 78, 99, 0.05) 0px 25px;
 	position: relative;
 	margin-top: 2rem;
 }
