refactor: using new h1 color

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ html {
 }
 
 h1 {
-	color: #eaeaea;
+	color: #bef8fb;
 	font-family: "Otomanopee One", sans-serif;
 	text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.7);
 }
