--- a/styles.css
+++ b/styles.css
@@ -54,3 +54,20 @@ img {
 	position: relative;
 	margin-top: 2rem;
 }
+
+.gpg-fingerprint {
+	color: #eaeaea;
+	font-family: "Otomanopee One", sans-serif;
+	text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.7);
+}
+
+pre {
+	overflow: auto;
+	margin-bottom: 2rem;
+	color: transparent;
+	background: #4c4c4c;
+	-webkit-background-clip: text;
+	-moz-background-clip: text;
+	background-clip: text;
+	text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.2);
+}
