--- a/styles.css
+++ b/styles.css
@@ -29,9 +29,14 @@ body {
 }
 
 h1 {
-	color: #bef8fb;
+	color: #eaeaea;
 	font-family: "Otomanopee One", sans-serif;
-	text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.7);
+	text-shadow: 0px 0px 6px rgba(255, 255, 255, 0.8);
+	font-weight: lighter;
+}
+
+.links {
+	border-bottom: 2px solid #c9c9c9;
 }
 
 a {
