--- a/styles.css
+++ b/styles.css
@@ -29,26 +29,29 @@ body {
 }
 
 h1 {
-	color: #eaeaea;
-	font-family: "Otomanopee One", sans-serif;
+	color: #fff;
+	font-family: monospace;
 	text-shadow: 0px 0px 6px rgba(255, 255, 255, 0.8);
-	font-weight: lighter;
+  padding: 1rem;
+  font-size: 2.5rem;
 }
 
-.links {
-	border-bottom: 2px solid #c9c9c9;
+.links:hover {
+  text-decoration: underline;
 }
 
 a {
 	outline: none;
-	text-decoration: underline;
-	text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.7);
-	padding: 2px 1px 0;
-	color: #eaeaea;
-	font-family: "Otomanopee One", sans-serif;
+	text-decoration: none;
+	text-shadow: 2px 5px 8px rgba(57, 52, 166, 0.5);
+	padding: 2px 5px 0;
+	color: #595959;
+	font-family: monospace;
+  font-size: 1rem;
 }
 
 a:hover {
-	color: #555168;
+	color: #eaeaea;
 	text-shadow: 0 0 7px #eaeaea, 0 0 10px #eaeaea, 0 0 21px #eaeaea;
+  font-size: 1.3rem;
 }
