--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,9 @@ body {
 h1 {
 	color: #fff;
 	font-family: Sans;
-	text-shadow: 0px 0px 6px rgba(255, 255, 255, 0.8);
+	text-shadow: 0px 0px 6px rgba(255, 255, 255, 0.8),
+			-1px 0px 1px #59a9ef,
+			1px 0px 1px #fcacac;
 	padding: 1rem;
 	font-size: 4rem;
 	font-weight: 900;
@@ -47,7 +49,7 @@ a {
 	font-size: 1.2rem;
 	font-weight: bold;
 	transition: all .3s;
-	background: linear-gradient(to right bottom, #F8F8FF, #C0C0C0);
+	background: linear-gradient(to right bottom, #FFF, #D1D1D1 40%, #FFF 55%, #C0C0C0);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 }
